testcases/positive/js_eval_bad.js
function run(input) {
  eval(input);
}
