testcases/negative/js_eval_safe.js
function run(input) {
  JSON.parse(input);
}
